example/secondfile/objects/DHStatus_Action__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-Step-Action</description>
    <fields>
        <fullName>Action_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-Step-Action</description>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Outcome__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-Step-Action</description>
        <label>Action Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Reason__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-Step-Action</description>
        <label>Action Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Time__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-Step-Action</description>
        <label>Action Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-Step-Action</description>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-Step-Action-DHStatus-Step</description>
        <label>DHStatus-Step</label>
        <referenceTo>DHStatus_Step__c</referenceTo>
        <relationshipLabel>DHStatus-Action</relationshipLabel>
        <relationshipName>DHStatus_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DHStatus-Action</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DHStatus-Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Action</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>